MIRTH-3170: Fixed a couple of small issues with Bootstrap container collapsing.

--- a/webadmin/WebContent/css/main.css
+++ b/webadmin/WebContent/css/main.css
@@ -576,7 +576,7 @@ tr.notAccepted {
 	border-radius: 5px;
 }
 
-.col-md-6-custom {
+.col-xs-6-custom {
 	width: 46%;
 }
 
